// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiLoadingWazuh is rendered 1`] = `
<span
  aria-label="aria-label"
  class="wuiLoadingWazuh wuiLoadingWazuh--medium testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    data-wuiicon-type="logoWazuh"
  />
</span>
`;

exports[`WuiLoadingWazuh size l is rendered 1`] = `
<span
  class="wuiLoadingWazuh wuiLoadingWazuh--large"
>
  <div
    data-wuiicon-type="logoWazuh"
  />
</span>
`;

exports[`WuiLoadingWazuh size m is rendered 1`] = `
<span
  class="wuiLoadingWazuh wuiLoadingWazuh--medium"
>
  <div
    data-wuiicon-type="logoWazuh"
  />
</span>
`;

exports[`WuiLoadingWazuh size xl is rendered 1`] = `
<span
  class="wuiLoadingWazuh wuiLoadingWazuh--xLarge"
>
  <div
    data-wuiicon-type="logoWazuh"
  />
</span>
`;

exports[`WuiLoadingWazuh size xxl is rendered 1`] = `
<span
  class="wuiLoadingWazuh wuiLoadingWazuh--xxLarge"
>
  <div
    data-wuiicon-type="logoWazuh"
  />
</span>
`;
